add pull command

--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,9 @@ inputs:
   docker_compose_filename:
     description: Docker compose file to use
     default: docker-compose.yaml
+  pull_before_up:
+    description: Set 'true' if need to pull before compose up
+    default: 'false'
   use_stack:
     description: Use docker stack instead of docker compose ("true" or "false").
     default: 'false'
@@ -33,4 +36,5 @@ runs:
     SSH_PRIVATE_KEY: ${{ inputs.ssh_private_key }}
     DOCKER_COMPOSE_FILENAME: ${{ inputs.docker_compose_filename }}
     DOCKER_COMPOSE_PREFIX: ${{ inputs.docker_compose_prefix }}
+    PULL_BEFORE_UP: ${{ inputs.pull_before_up }}
     USE_DOCKER_STACK: ${{ inputs.use_stack }}
